--- a/html/about.html
+++ b/html/about.html
@@ -68,12 +68,11 @@
         <div>（九州を見ているなら全体における古い時期を、愛知静岡を見ているなら全体における真ん中辺りを見ていることが自然に把握できる）</div>
         <div>（「○○地方/○○県のあの辺りの出来事」と場所の位置のイメージとして記憶に残り、見て楽しく、人に伝えやすい）</div>
         <br>
-        <div>最後に</div>
         <div>2015年の夏、縄文時代を目的に、若狭<ruby>三方<rt>みかた</rt></ruby>縄文博物館を訪ね、現地で初めて水月湖のことを知りました。</div>
         <div>その直後に『時を刻む湖』（中川 毅(著), 2015年, 岩波書店(岩波科学ライブラリー 242)）が出版され、そこで詳細な内容と経緯を知りました。</div>
-        <div>縄文時代をはるかにさかのぼる5～7万年という途方もない時間の積み重ねに（及び研究作業の精度と情熱に）圧倒され感動しました。</div>
+        <div>縄文時代をはるかにさかのぼる5～7万年という途方もない時間の積み重ねに圧倒され、また研究作業の精度と情熱に感動しました。</div>
         <div>今回作成した年表の「後期旧石器時代～」範囲の表示は、水月湖の年縞がカバーする範囲に重なっており、</div>
-        <div>この時間の線上の1年1年に年縞がみっしりと積み重なっているのだと、改めて圧倒される思いです。</div>
+        <div>この時間の線上の1年1年に年縞がみっしりと積み重なっているのだと、改めて気の遠くなる思いです。</div>
         <div>当サイトが、そのような驚きや感動の体験につながる手助けになれば幸いです。</div>
       </div>
     </div>
