--- a/html/about.html
+++ b/html/about.html
@@ -47,11 +47,10 @@
     </div>
 
     <div class="section">
-      <div>当サイトを作った背景、大元の発端</div>
+      <div>当サイトを作った背景</div>
       <div class="note">
         <div>十数年前のこと、読んだ本の内容を書き留めようと、表計算ソフト(Excel)で年表を作ったことがあります。</div>
         <div>そのときに気づいたのは、間を省略することなく、年の間隔を一定にして書くことで、それぞれの出来事の遠さが実感できるという点でした。</div>
-        <br>
         <div>当時は特に、縄文時代の圧倒的な時間の長さ、縄文土偶が気の遠くなるほど遠い昔に作られたという事実、</div>
         <div>当時それを作った人が確かにいて、それが今日まで朽ち果てることなく形をとどめて残り、それを今実際に目にすることができている、</div>
         <div>という奇跡的な出来事に目が眩む思いをしました。</div>
@@ -67,13 +66,7 @@
         <div>それによって常に全体感を持ちつつ詳細を見ることができる利点もあると。</div>
         <div>（九州を見ているなら全体における古い時期を、愛知静岡を見ているなら全体における真ん中辺りを見ていることが自然に把握できる）</div>
         <div>（「○○地方/○○県のあの辺りの出来事」と場所の位置のイメージとして記憶に残り、見て楽しく、人に伝えやすい）</div>
-        <br>
-        <div>2015年の夏、縄文時代を目的に、若狭<ruby>三方<rt>みかた</rt></ruby>縄文博物館を訪ね、現地で初めて水月湖のことを知りました。</div>
-        <div>その直後に『時を刻む湖』（中川 毅(著), 2015年, 岩波書店(岩波科学ライブラリー 242)）が出版され、そこで詳細な内容と経緯を知りました。</div>
-        <div>縄文時代をはるかにさかのぼる5～7万年という途方もない時間の積み重ねに圧倒され、また研究作業の精度と情熱に感動しました。</div>
-        <div>今回作成した年表の「後期旧石器時代～」範囲の表示は、水月湖の年縞がカバーする範囲に重なっており、</div>
-        <div>この時間の線上の1年1年に年縞がみっしりと積み重なっているのだと、改めて気の遠くなる思いです。</div>
-        <div>当サイトが、そのような驚きや感動の体験につながる手助けになれば幸いです。</div>
+        <div>当サイトが、前述のような素朴な驚きや感動の体験につながる手助けになれば幸いです。</div>
       </div>
     </div>
 
