--- a/html/source_summary.html
+++ b/html/source_summary.html
@@ -109,6 +109,8 @@
         <div class="margin-separater"></div>
         <div class="note">『暗記じゃなくて考えたら日本史はこんなにおもしろい』, 小泉 秀人(著), 2023年, 山川出版社</div>
         <div class="note">『詳説日本史図録　第10版』, 詳説日本史図録編集委員会(編), 2023年, 山川出版社</div>
+        <div class="note">『枕草子のたくらみ　「春はあけぼの」に秘められた思い』, 山本 淳子(著), 2017年, 朝日新聞出版 (朝日選書)</div>
+        <div class="note">『平安人の心で「源氏物語」を読む』, 山本 淳子(著), 2014年, 朝日新聞出版 (朝日選書)</div>
         <div class="margin-separater"></div>
         <div class="note">『時を刻む湖』, 中川 毅(著), 2015年, 岩波書店 (岩波科学ライブラリー 242)</div>
         <div class="note">『日本海　その深層で起こっていること』, 蒲生 俊敬(著), 2016年, 講談社 (ブルーバックス 1957)</div>
