chore: Modify text

--- a/html/source_summary.html
+++ b/html/source_summary.html
@@ -96,21 +96,21 @@
       <div class="content">
         <div class="note">『ビジュアル版　旧石器時代ガイドブック』, 堤 隆(著), 2009年, 新泉社 (シリーズ「遺跡を学ぶ」)</div>
         <div class="note">『旧石器時代―日本文化のはじまり』, 佐藤 宏之(著), 2019年, 敬文舎 (ヒスカルセレクション考古１)</div>
-        <div class="margin-separater"></div>
         <div class="note">『ビジュアル版　縄文時代ガイドブック』, 勅使河原 彰(著), 2013年, 新泉社 (シリーズ「遺跡を学ぶ」)</div>
         <div class="note">『縄文時代の歴史』, 山田 康弘(著), 2019年, 講談社 (講談社現代新書)</div>
-        <div class="margin-separater"></div>
         <div class="note">『ビジュアル版　弥生時代ガイドブック』, 安藤 広道(著), 2023年, 新泉社 (シリーズ「遺跡を学ぶ」)</div>
         <div class="note">『弥生時代の歴史』, 藤尾 慎一郎(著), 2015年, 講談社 (講談社現代新書)</div>
-        <div class="margin-separater"></div>
         <div class="note">『ビジュアル版　古墳時代ガイドブック』, 若狭 徹(著), 2013年, 新泉社 (シリーズ「遺跡を学ぶ」)</div>
         <div class="note">『倭国の古代学』, 坂 靖(著), 2021年, 新泉社</div>
         <div class="note">『日本の先史時代　旧石器・縄文・弥生・古墳時代を読みなおす』, 藤尾 慎一郎(著), 2021年, 中央公論新社 (中公新書)</div>
         <div class="margin-separater"></div>
         <div class="note">『暗記じゃなくて考えたら日本史はこんなにおもしろい』, 小泉 秀人(著), 2023年, 山川出版社</div>
         <div class="note">『詳説日本史図録　第10版』, 詳説日本史図録編集委員会(編), 2023年, 山川出版社</div>
+        <div class="note">『日本という方法　おもかげ・うつろいの文化』, 松岡 正剛(著), 2006年, NHK出版 (NHKブックス)</div>
         <div class="note">『枕草子のたくらみ　「春はあけぼの」に秘められた思い』, 山本 淳子(著), 2017年, 朝日新聞出版 (朝日選書)</div>
         <div class="note">『平安人の心で「源氏物語」を読む』, 山本 淳子(著), 2014年, 朝日新聞出版 (朝日選書)</div>
+        <div class="note">『西行　花と旅の生涯』, 佐藤 和彦(編), 樋口 州男(編), 2012年, 新人物往来社 (新人物往来社文庫)</div>
+        <div class="note">『西行の風景』, 桑子 敏雄(著), 1999年, NHK出版 (NHKブックス)</div>
         <div class="margin-separater"></div>
         <div class="note">『時を刻む湖』, 中川 毅(著), 2015年, 岩波書店 (岩波科学ライブラリー 242)</div>
         <div class="note">『日本海　その深層で起こっていること』, 蒲生 俊敬(著), 2016年, 講談社 (ブルーバックス 1957)</div>
