refactor: Modify html layout

--- a/html/about.html
+++ b/html/about.html
@@ -25,7 +25,20 @@
 </head>
 <body>
   <div class="head">
+    <div class="goto-top-section">
+      <div class="goto-top">
+        <span><a href="./" target="_self">⏪ Topへ移動</a></span>
+      </div>
+    </div>
+
     <div class="title">『歴史年表地図：地図で表現するタイムライン』 © 2024 Kirishima</div>
+
+    <div class="contact-section">
+      <div class="contact">
+        <span>Developed by</span>
+        <span><a href="https://twitter.com/kiritter" target="_blank">@kiritter</a></span>
+      </div>
+    </div>
   </div>
 
   <div class="body">
@@ -84,19 +97,6 @@
       <div class="note2">
         <div>掲載情報/表示情報について、できる限り情報の正確性を心掛けておりますが、正確な情報提供を保証するものではございません。</div>
         <div>当サイトをご利用することで発生したトラブル/損害/損失に対する一切の責任を負いかねますこと、ご了承ください。</div>
-      </div>
-    </div>
-
-    <div class="goto-top-section">
-      <div class="goto-top">
-        <span><a href="./" target="_self">『歴史年表地図：地図で表現するタイムライン』Topへ移動</a></span>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="contact">
-        <span>Developed by</span>
-        <span><a href="https://twitter.com/kiritter" target="_blank">@kiritter</a></span>
       </div>
     </div>
 
