--- a/html/readme_cache.html
+++ b/html/readme_cache.html
@@ -25,6 +25,12 @@
 </head>
 <body>
   <div class="head">
+    <div class="goto-top-section">
+      <div class="goto-top">
+        <span><a href="./" target="_self">⏪ Topへ移動</a></span>
+      </div>
+    </div>
+
     <div class="title">永続的キャッシュ機能の説明</div>
   </div>
 
@@ -116,12 +122,6 @@
           <div>有効時は、一旦すべて消えた後で、遅れて画像が表示される、といった動きに変わるため、</div>
           <div>描画がチラつく見栄えになります。</div>
         </div>
-      </div>
-    </div>
-
-    <div class="goto-top-section">
-      <div class="goto-top">
-        <span><a href="./" target="_self">『歴史年表地図：地図で表現するタイムライン』Topへ移動</a></span>
       </div>
     </div>
 
