--- a/html/source_summary.html
+++ b/html/source_summary.html
@@ -25,12 +25,18 @@
 </head>
 <body>
   <div class="head">
-    <div class="title">出典情報</div>
+    <div class="goto-top-section">
+      <div class="goto-top">
+        <span><a href="./" target="_self">⏪ Topへ移動</a></span>
+      </div>
+    </div>
+
+    <div class="title">出典情報、参考文献情報</div>
   </div>
 
   <div class="body">
     <div class="section">
-      <div class="title">OpenStreetMap</div>
+      <div class="title">地図データ：OpenStreetMap</div>
       <div class="content">
         <div class="link">
           <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a>
@@ -40,7 +46,7 @@
     </div>
 
     <div class="section">
-      <div class="title">空中写真</div>
+      <div class="title">地図データ：空中写真</div>
       <div class="content">
         <div class="link">
           <a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル一覧</a>
@@ -129,12 +135,6 @@
       <div class="title">都道府県境</div>
       <div class="content">
         <div class="link"><a href='https://japonyol.net/editor/article/47-prefectures-geojson.html' target='_blank'>japonyol.net (旧称 地図蔵) | 47都道府県のポリゴンデータ geojson</a><span class="note">　(※2024年1月に左記サイトよりgeojsonファイルをダウンロードし利用)</span></div>
-      </div>
-    </div>
-
-    <div class="goto-top-section">
-      <div class="goto-top">
-        <span><a href="./" target="_self">『歴史年表地図：地図で表現するタイムライン』Topへ移動</a></span>
       </div>
     </div>
 
