chore: Add book info

--- a/html/source_summary.html
+++ b/html/source_summary.html
@@ -112,6 +112,8 @@
         <div class="margin-separater"></div>
         <div class="note">『暗記じゃなくて考えたら日本史はこんなにおもしろい』, 小泉 秀人(著), 2023年, 山川出版社</div>
         <div class="note">『詳説日本史図録　第10版』, 詳説日本史図録編集委員会(編), 2023年, 山川出版社</div>
+        <div class="note">『中世瀬戸内の港町　草戸千軒町遺跡　改訂版』, 鈴木 康之(著), 2023年, 新泉社 (シリーズ「遺跡を学ぶ」40)</div>
+        <div class="note">『歴史でめぐる 伏見の旅』, 「THE 伏見」編集部(編), 2015年, 淡交社</div>
         <div class="note">『日本という方法　おもかげ・うつろいの文化』, 松岡 正剛(著), 2006年, NHK出版 (NHKブックス)</div>
         <div class="note">『枕草子のたくらみ　「春はあけぼの」に秘められた思い』, 山本 淳子(著), 2017年, 朝日新聞出版 (朝日選書)</div>
         <div class="note">『平安人の心で「源氏物語」を読む』, 山本 淳子(著), 2014年, 朝日新聞出版 (朝日選書)</div>
